Client Readme update: Vm option added 2 possibles ways to run the project